# kr

./: Cargo.toml  README.md  SKILL.md
.kr/: kr.json
.tickets/: kr-11ss.md  kr-177o.md  kr-555q.md  kr-5cbg.md  kr-64zs.md  kr-6q5a.md  kr-74r6.md  kr-8m72.md  kr-9yom.md  kr-aecb.md  kr-cqag.md  kr-fnkf.md  kr-n735.md  kr-qkur.md  kr-t39m.md  kr-wqdq.md  kr-yibl.md  kr-z1xz.md
demo/: kr-demo.json
src/: main.rs
tests/: assumptions.rs  common.rs  features.rs  lifecycle.rs  mutation.rs  resolution.rs  safety.rs
tests/benches/: perf.rs
