[package]
name = "kr"
version = "0.1.0"
edition = "2021"
description = "Knowledge registry CLI for managing context sources"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
dirs = "5"
serde_json = "1"
